line breaks on notes. fixed menu-stay  bug

--- a/css/keep/cmps/keep-notes-preview.css
+++ b/css/keep/cmps/keep-notes-preview.css
@@ -62,6 +62,7 @@
     height: 100%;
     width: 100%;
     padding: 5px;
+    white-space: pre-wrap;
 }
 
 .iframe {
